deploy/k3s/overlays/k3d/patch-keycloak-hostname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-keycloak
  namespace: dnd-notes-platform
spec:
  template:
    spec:
      containers:
        - name: keycloak
